proje/wptest.yaml
# 3. MySQL Deployment + ClusterIP Service
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: test
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeName: multinode-cluster-m02  # Belirli node
      containers:
        - name: mysql
          image: mysql:5.6
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc

---
# 5. WordPress Deployment + ClusterIP Service
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: test
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      nodeName: multinode-cluster-m02  # Aynı node
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /var/www/html
              name: wordpress-storage
      volumes:
        - name: wordpress-storage
          persistentVolumeClaim:
            claimName: wordpress-pvc
